# ip2w

./: Cargo.toml  readme.md
modules/atom/: Cargo.toml
modules/atom/src/: atom_motion.rs  bmi270.rs  lib.rs  lp5562.rs
modules/control/: Cargo.toml
modules/control/src/: lib.rs
modules/control/src/fb/: pid.rs
modules/control/src/util/: imu_ekf.rs  mod.rs
modules/esp-bsp/: Cargo.toml  README.md
modules/esp-bsp/.github/workflows/: release.yml
modules/esp-bsp/src/: lib.rs  prelude.rs  shared.rs
modules/esp-bsp/src/boards/: esp32_c3_devkit_rust.rs  esp32_c3_lcdkit.rs  esp32_c6_devkitc_1.rs  esp32_s2_kaluga.rs  esp32_s3_box.rs  esp32_s3_box_3.rs  esp32_s3_usb_otg.rs  esp32_wrover_kit.rs  m5atom_s3r.rs  m5stack_core2.rs  m5stack_cores3.rs  m5stack_fire.rs  mod.rs  waveshare_esp32_c6_lcd_1_47.rs
modules/esp-display-interface-spi-dma/: Cargo.toml
modules/esp-display-interface-spi-dma/src/: display_interface_spi_dma.rs
modules/esp-spidma-interface/: Cargo.toml
modules/esp-spidma-interface/src/: lib.rs  spidma_interface.rs
src/: atom_motion.rs  main.rs
