[package]
edition      = "2024"
name         = "ip2w"
version      = "0.1.0"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "psram", "unstable"] }
esp-rtos = { version = "0.2", features = ["defmt", "esp-alloc", "esp-radio", "esp32s3"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["defmt", "esp32s3"] }
esp-alloc = { version = "0.9", features = ["defmt"] }
esp-backtrace = { version = "0.18", features = ["defmt", "esp32s3", "panic-handler"] }
esp-println = { version = "0.16", features = ["defmt-espflash", "esp32s3"] }
esp-radio = { version = "0.17", features = [
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-display-interface-spi-dma = { version = "0.2", features = ["esp32s3"], path = "./modules/esp-display-interface-spi-dma"}
esp-bsp = {version = "0.4", path = "./modules/esp-bsp"}

embedded-io = { version = "0.7", features = ["defmt"] }
embedded-graphics = "0.8"

critical-section = "1.2"
defmt = "1.0"
shared-bus = "0.3"
heapless = "0.9"
libm = {version = "0.2"}
mipidsi = "0.9"
smoltcp = { version = "0.12", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
